Added VSCode and AS3 build files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,14 @@ bin
 bin-release
 /.vscode
 /asconfig.json
+
+bin-debug/
+bin-release/
+[Oo]bj/
+[Bb]in/
+*.swf
+*.air
+*.ipa
+*.apk
+.vscode/
+asconfig.json
